# TranscriberBot

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: __main__.py  bot.py  config.py  logger.py
bot/filters/: voice.py
bot/handlers/: __init__.py  checker.py  help.py  lang.py  start.py  stt.py  stt_tts.py
bot/keyboards/: __init__.py
bot/states/: lang.py  stt_lang.py
bot/utils/: audio_to_text.py  filter.py  stt.py  text_to_audio.py  translations.py  tts.py
